Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30838

Assertion `m_thd == _current_thd()' failed in virtual int Wsrep_client_service::bf_rollback()

    XMLWordPrintable

Details

    Description

      CREATE TABLE t1 (f1 INTEGER PRIMARY KEY);
      SET SESSION wsrep_trx_fragment_size=1;
      START TRANSACTION;
      INSERT INTO t1 VALUES(1);
      SET debug_dbug='+d,ib_create_table_fail_too_many_trx';
      INSERT INTO t1 VALUES(2);
      COMMIT;
      

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            sciascid Daniele Sciascia (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.