MDEV-30838 Assertion `m_thd == _current_thd()'

- Update wsrep-lib which contains fix for the assertion
- Fix error handling for appending fragment to streaming log,
  make sure tables are closed after rollback.